@@ -1,0 +1,45 @@
+# This is a basic workflow to help you get started with Actions
+
+name: CI
+
+# Controls when the action will run. Triggers the workflow on push or pull request events
+on:
+  push:
+  pull_request:
+
+env:
+  R_VERSION: "4.0"
+  
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+
+    # Runs a set of commands using the runners shell
+    - name: Prepare
+      run: |
+        sudo apt update
+        sudo apt upgrade
+        curl -OLs https://eddelbuettel.github.io/r-travis/run.sh
+        chmod 0755 run.sh
+
+    # Bootstrap
+    - name: Bootstrap
+      run: ./run.sh bootstrap
+
+    # Runs a set of commands using the runners shell
+    - name: Dependencies
+      run: |
+        ./run.sh install_aptget r-cran-jsonlite r-cran-httr
+        ./run.sh install_r whoami
+
+    # Run test
+    - name: Test
+      run: ./run.sh run_tests
