@@ -1,3 +1,10 @@
+2020-08-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* .github/workflows/main.yml: Add a GitHub Actions workflow
+	* .Rbuildignore: Exclude .github
+
 2020-05-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add 'last commit' badge
